# dummy-release-test

./: .clang-format  .releaserc.json  CHANGELOG.md  CMakeLists.txt  build.sh  package-lock.json  package.json
.github/tools/: mk-release-package.sh
.github/workflows/: ci.yml  release.yml
src/: CMakeLists.txt  hello.cpp
